[package]
name = "progmem"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "fat"

[dependencies]
regex = "1"
clap = {version = "4", features = ["derive"]}
map-macro = "0.2.5"
color-print = "0.3.4"