[package]
name = "progmem"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "fat"

[dependencies]
regex = "1.11"
clap = {version = "4.5", features = ["derive"]}
map-macro = "0.3"
thiserror = "2.0"
color-print = "0.3.7"